# pixie-sdk-py

./: .gitignore  .pylintrc  README.md  RELEASE_SETUP.md  ci.ruff.toml  demo.py  interactive_agent.py  pyproject.toml  ruff.toml  test_pydantic.py
.github/: copilot-instructions.md
.github/workflows/: daily-release.yml  deploy-docs.yml  version-bump-release.yml
.pixie/prompts/my_first_prompt/: metadata.json  v1.jinja
docs/: CHANGES-no-langfuse-env-vars.md  DOCS_SETUP_SUMMARY.md  GITHUB_PAGES_SETUP.md  OTel-types.md  Otel-in-graphql.md  Otel-subscription-gql-example.md  Pause-Timing-Implementation.md  QUICK_REFERENCE.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: introduction.md  quickstart.md
docs/docs/api/: overview.md
docs/docs/concepts/: architecture.md  instrumentation.md  system-architecture.md
docs/docs/guides/: app-names-and-descriptions.md  enable-tracing-langchain-langgraph.md  interactivity-inside-tools.md  make-your-application-interactive.md  register-your-application.md  run-local-server-with-options.md  use-structured-io.md
docs/docs/tutorial/: interactive-app.md  interactive-tool.md  setup.md  structured-io.md  web-ui.md
docs/pdoc-templates/: module.html.jinja2
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/static/api/: index.html  pixie.html  search.js
langfuse/_client/: client.py  constants.py  resource_manager.py  span_processor.py
pixie/: __init__.py  cli.py  execution_context.py  otel_types.py  piccolo_conf.py  registry.py  schema.py  sdk.py  server.py  server_utils.py  strawberry_types.py  types.py  utils.py
pixie/agents/: evaluator_optimizer.py  evaluators.py  graphql.py  optimizers.py  rating_agent.py
pixie/prompts/: prompt.py  prompt_management.py  storage.py
pixie/session/: client.py  constants.py  rpc.py  server.py  types.py
pixie/storage/: __init__.py  graphql.py  operations.py  tables.py  types.py
specs/: optimize-evaluator.md
tests/: test_pixie_only_mode_init.py  test_pixie_utils.py  test_registry_type_handling.py  test_storage.py
tests/pixie/: test_e2e_pixie_only.py  test_evaluator_optimizer.py  test_input_required.py  test_pause_resume.py  test_pause_timing.py  test_pixie_only_mode.py  test_prompt.py  test_prompt_management.py  test_prompt_storage.py  test_rating_mutations.py  test_registry.py  test_registry_type_handling.py  test_session.py  test_session_client_disconnect.py  test_session_info.py  test_session_server_cleanup.py  test_span_processor.py  test_storage.py  test_storage_graphql.py  test_trace_emission.py
tests/pixie/agents/: __init__.py
(+1 files in other folders)
